--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 </head>
 
 <body>
+
   <h1 id="heading">Desserts</h1>
   <hr>
+  <div id="showDiv">
+    <h3 id="show">Product added to Cart Successfully</h3>
+  </div>
   <div id="container">
     <div class="imageContainer">
       <div class="image">
